<resources>
    <!-- Nombre de la Aplicación -->
    <string name="app_name">NeighborPeace</string>

    <!-- Cadenas para elementos de menú y navegación -->
    <string name="agregar_problema">Agregar Problema</string>
    <string name="historial">Historial</string>
    <string name="home">Home</string>
    <string name="notificaciones">Notificaciones</string>

    <!-- Cadenas generales de UI -->
    <string name="retroceder">Retroceder</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña</string>
    <string name="direcci_n">Dirección</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="contrase_a">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="registro">Registro</string>
    <string name="tel_fono">Teléfono</string>
    <string name="acepto_los_t_rminos_y_condiciones">Acepto los términos y condiciones</string>

    <!-- Elementos de Pantalla de Inicio -->
    <string name="home2">HOME</string>
    <string name="logotipo_de_neighborpeace">Logotipo de NeighborPeace</string>
    <string name="imagen_de_perfil">Imagen de perfil</string>
    <string name="buscar_en_neighbourpeace">Buscar en NeighborPeace</string>
    <string name="problemas_pendientes_de_resolver">Problemas pendientes de resolver</string>
    <string name="nombre_del_usuario">NOMBRE DEL USUARIO</string>

    <!-- Cadenas para pantalla de Login -->
    <string name="email2">Email</string>
    <string name="has_olvidado_tu_contrase_a">¿Has olvidado tu contraseña?</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="logoapplogin">logoAppLogin</string>
    <string name="contrase_a2">Contraseña</string>
    <string name="registrarse2">Registrarse</string>
    <string name="logoapp">logoApp</string>

    <!-- Información del equipo -->
    <string name="from_n_equipodedesarrollo">FROM\n@EQUIPODEDESARROLLO</string>

    <!-- Pantalla de perfil y edición de perfil -->
    <string name="cambiar_imagen">Cambiar Imagen</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="_7089_5467">7089 5467</string>

    <!-- Cadenas para la pantalla de recuperación de contraseña -->
    <string name="recuperar_contrase_a">Recuperar Contraseña</string>
    <string name="enviar_correo_de_recuperaci_n">Enviar Correo de Recuperación</string>
    <string name="volver_al_login">Volver al Login</string>
    <string name="error_campo_requerido">Este campo es requerido</string>
    <string name="error_email_invalido">Por favor ingrese un email válido</string>

    <!-- Otros elementos -->
    <string name="logo_app">Logo de la aplicación</string>
    <string name="asignar_rol">Asignar Rol</string>
    <string name="administrador">Administrador</string>
    <string name="com_n">Común</string>
    <string name="usuario_seleccionado_nombreusuario">Usuario seleccionado: [NombreUsuario]</string>
    <string name="asignar_rol_Title">Asignar Rol</string>
    <string name="escribe_un_mensaje">Escribe un mensaje...</string>
    <string name="bot_n_de_retroceso">Botón de retroceso</string>
    <string name="escribe_un_mensaje_input">Escribe un mensaje...</string>
    <string name="button_send_admin">➕</string>
    <string name="enviar_admin_button">Enviar</string>
    <string name="informaci_n_del_problema">Información del Problema</string>
    <string name="reportado_por">Reportado por</string>
    <string name="ingeniero_asignado">Ingeniero Asignado</string>
    <string name="supervisor_asignado">Supervisor Asignado</string>
    <string name="abrir_chat">Abrir chat</string>
    <string name="pendiente_de_asignar">Pendiente de asignar</string>
    <string name="pendiente_de_asignar_TV">Pendiente de asignar</string>
    <string name="ingresa_tu_email">Ingresa tu email</string>
    <string name="email_edit_profile">Email</string>
    <string name="perfil">PERFIL</string>
    <string name="ingresa_tu_ubicaci_n">Ingresa tu ubicación</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="ingresa_tu_nombre">Ingresa tu nombre</string>
    <string name="nombre_edit_profile">Nombre</string>
    <string name="ingresa_tu_tel_fono">Ingresa tu teléfono</string>
    <string name="tel_fono_edit_profile">Teléfono</string>
    <string name="imagen_de_perfil_edit_profile">Imagen de perfil</string>
    <string name="guardar_cambios">Guardar Cambios</string>
    <string name="editar_perfil_title">Editar Perfil</string>
    <string name="a_adir_opci_n">Añadir opción</string>
    <string name="bot_n_para_regresar">Botón para regresar</string>
    <string name="eliminar_opci_n_1">Eliminar Opción 1</string>
    <string name="eliminar_opci_n_2">Eliminar Opción 2</string>
    <string name="hacer_encuesta">Hacer encuesta</string>
    <string name="opci_n_1">Opción 1</string>
    <string name="opci_n_2">Opción 2</string>
    <string name="ingresa_tu_pregunta_aqu">Ingresa tu pregunta aquí</string>
    <string name="opciones">Opciones</string>
    <string name="pregunta">Pregunta</string>
    <string name="crear_encuesta">Crear Encuesta</string>
    <string name="from_tech_knights">From Tech Knights</string>
    <string name="buscar_en_neighborpeace">Buscar en NeighborPeace</string>
    <string name="foto_seleccionada">Foto seleccionada</string>
    <string name="agregar_cono">Agregar ícono</string>
    <string name="agregar_foto">Agregar Foto</string>
    <string name="agrega_m_s_detalles_sobre_el_problema">Agrega más detalles sobre el problema</string>
    <string name="descripci_n">Descripción</string>
    <string name="ubicaci_n_del_problema">Ubicación del problema</string>
    <string name="ubicaci_n_problemas">Ubicación</string>
    <string name="publicar_problema">Publicar Problema</string>
    <string name="reportar_situaci_n_a_la_comunidad">Reportar situación a la comunidad</string>
    <string name="ingresa_un_t_tulo_para_el_problema">Ingresa un título para el problema</string>
    <string name="t_tulo">Título</string>
    <string name="email_profile">Email</string>
    <string name="walterflores_gmail_com">walterflores@gmail.com</string>
    <string name="home_profile">HOME</string>
    <string name="ubicaci_n_profile">Ubicación</string>
    <string name="santa_ana">Santa Ana</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="nombre_profile">Nombre</string>
    <string name="walter_flores">Walter Flores</string>
    <string name="tel_fono_profile">Teléfono</string>
    <string name="imagen_de_perfil_profile">Imagen de perfil</string>
    <string name="perfil_profile">Perfil</string>
    <string name="seleccionar_foto_de_galer_a">Seleccionar foto de galería</string>
    <string name="tomar_una_foto">Tomar una foto</string>
    <string name="descripci_n_del_item">Descripción del item</string>
    <string name="publicaste_un_problema">Publicaste un problema</string>
    <string name="luis_mario_benitez_dominguez">luis_mario_benitez_dominguez</string>
    <string name="david_mauricio_herrera_herrera">david_mauricio_herrera_herrera</string>
    <string name="walter_armando_flores_flores">walter_armando_flores_flores</string>
    <string name="regresar">Regresar</string>
    <string name="neighborpeace">NeighborPeace</string>
</resources>
